<resources>
    <string name="app_name">MDK_S7</string>
    <string name="Analysis">Анализы</string>
    <string name="Notifications">Уведомления</string>
    <string name="Monitoring">Мониторинг</string>
    <string name="textAnalysis">Экспресс сбор и получение проб</string>
    <string name="textNotifications">Вы быстро узнаете о результатах</string>
    <string name="textMonitoring">Наши врачи всегда наблюдают\nза вашими показателями здоровья</string>
    <string name="skip">Пропустить</string>
    <string name="welcome"><b>Добро пожаловать!</b></string>
    <string name="signin">Войдите, чтобы пользоваться функциями\nприложения</string>
    <string name="yandex"><b>Войти с Яндекс</b></string>
    <string name="EnterEmailCode"><b>Введите код из E-mail</b></string>
    <string name="RepeatCode">Отправить код повторно можно\nбудет через </string>
    <string name="seconds"> секунд</string>
    <string name="CreatePassword"><b>Создайте пароль</b></string>
    <string name="PasswordText">Для защиты ваших персональных данных</string>
    <string name="Card"><b>Создание карты\nпациента</b></string>
    <string name="CardText">Без карты пациента вы не сможете заказать анализы.\n\nВ картах пациентов будут храниться результаты анализов вас и ваших близких.</string>
    <string name="finish">Завершить</string>
    <string name="next">Далее</string>
    <string name="or_enter_with_help_of">Или войдите с помощью</string>
    <string name="to_create">Создать</string>
    <string name="birthdate">Дата рождения</string>
    <string name="sirname">Фамилия</string>
    <string name="last_name">Отчество</string>
    <string name="first_name">Имя</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add">Добавить</string>
    <string name="remove">Убрать</string>
    <!-- Текст для массива тестов-->
    <string name="test_pcr_name"><b>ПЦР-тест на определение РНК коронавируса стандартный</b></string>
    <string name="test_pcr_days">2 дня</string>
    <string name="test_pcr_cost"><b>1800 ₽</b></string>
    <string name="test_blood_name"><b>Клинический анализ крови с лейкоцитарной формулировкой</b></string>
    <string name="test_blood_days">1 день</string>
    <string name="test_blood_cost"><b>690 ₽</b></string>
    <string name="test_bio_name"><b>Биохимический анализ крови, базовый</b></string>
    <string name="test_bio_days">1 день</string>
    <string name="test_bio_cost"><b>2440 ₽</b></string>
    <string name="test_soy_name"><b>СОЭ (венозная кровь)</b></string>
    <string name="test_soy_days">3 дня</string>
    <string name="test_soy_cost"><b>670 ₽</b></string>
    <string name="descr_test">Клинический анализ крови – это самое важное комплексное лабораторное исследование при обследовании человека с любым заболеванием. Изменение исследуемых показателей, как правило, происходит задолго до появления видимых симптомов болезни. </string>
    <string name="prepare_test">Кровь следует сдавать утром натощак, днем или вечером – через 4-5 часов после последнего приема пищи. \nЗа 1–2 дня до исследования необходимо исключить из рациона продукты с высоким содержанием жиров и алкоголь.</string>
    <string name="vein_blood">Венозная кровь</string>
    <string name="search_analysis">Искать анализы</string>
    <string name="add_with_cost">"Добавить за "</string>

    <string name="_patient">" пациент"</string>
    <string name="_patients25">" пациента"</string>
    <string name="_patients_many">" пациентов"</string>
    <string name="continue_">Продолжить</string>
</resources>