<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ActivityCreateCard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCardHeader"
            android:layout_width="170dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:text="@string/Card"
            android:textColor="@color/black"
            android:textSize="24dp" />

        <Button
            android:id="@+id/btnSkipCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/skip"
            android:textColor="@color/blueButton" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvCardText"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/CardText"
        android:textColor="@color/greyText" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="text"
        android:text="Имя"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etPatronymic"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="text"
        android:text="Отчество"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="text"
        android:text="Фамилия"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etDate"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="date"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext"
        android:textColor="@color/black"/>

    <Spinner
        android:id="@+id/spGender"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:background="@drawable/edittext"/>

    <Button
        android:id="@+id/btnCreateCard"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:text="Создать"
        android:background="@drawable/buttons_blue"
        android:layout_marginTop="15dp"/>

</LinearLayout>