<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCreatePassword">

    s<Button
        android:id="@+id/btnSkipPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:text="@string/skip"
        android:textColor="@color/blueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llBalls"
        android:layout_width="92dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvCreatePasswordText"
        tools:layout_editor_absoluteX="159dp">

        <ImageView
            android:id="@+id/ivBall1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/whiteball" />

        <ImageView
            android:id="@+id/ivBall2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/whiteball" />

        <ImageView
            android:id="@+id/ivBall3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/whiteball" />

        <ImageView
            android:id="@+id/ivBall4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/whiteball" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="446dp"
        android:layout_marginStart="2dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llBalls">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="104dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_round"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="32dp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_round"
                android:text="2"
                android:textColor="@color/black"
                android:textSize="32dp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_round"
                android:text="3"
                android:textColor="@color/black"
                android:textSize="32dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="98dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_round"
                android:text="4"
                android:textColor="@color/black"
                android:textSize="32dp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_round"
                android:text="5"
                android:textColor="@color/black"
                android:textSize="32dp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_round"
                android:text="6"
                android:textColor="@color/black"
                android:textSize="32dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_round"
                android:text="7"
                android:textColor="@color/black"
                android:textSize="32dp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_round"
                android:text="8"
                android:textColor="@color/black"
                android:textSize="32dp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_round"
                android:text="9"
                android:textColor="@color/black"
                android:textSize="32dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingLeft="120dp">

            <Button
                android:id="@+id/btn0"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_round"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="32dp" />

            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttons_round"
                app:srcCompat="@drawable/deleteicon" />


        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvCreatePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:text="@string/CreatePassword"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCreatePasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/PasswordText"
        android:textColor="@color/greyText"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreatePassword" />
</androidx.constraintlayout.widget.ConstraintLayout>